/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+
 - Compute SROM checksum for network interface. Tru64 needs this.
   (29-feb-2008, Brian Wheeler)
 - Fix vms boot problems from ide cdrom and make Tru64 installation
   possible by: a) Clearing the busmaster active bit when the bit 1
   is written to the busmaster status register; and b) Attempting 
   to refire the interrupt if the driver seems to have missed it.
   (27-feb-2008, Brian Wheeler)
 - Major rewrite of NIC code. Real internal loopback support, ring
   queue for incoming packets, and various other improvements.
   (26-feb-2008, David Hittner)
 - Improvements to backtrace functionality on GNU systems
   (26-feb-2008, Brian Wheeler)
 - Better config file syntax checking and error reporting.
   (26-feb-2008, Brian Wheeler)
 - Moved DMA code into it's own class (CDMA). (26-feb-2008, Camiel
   Vanderhoeven)
 - Shut down display refresh thread when emulator exits.
   (20-feb-2008, David Leonard)
 - Return SYSTEM RESOURCE FAILURE sense if dato/dati buffer size
   is exceeded in SCSI operations. (20-feb-2008, David Leonard)
 - Support MSF in READ TOC scsi command. (20-feb-2008, Brian
   Wheeler)
 - Show disk creation progress. (20-feb-2008, David Leonard)
 - Avoid 'Xlib: unexpected async reply' errors on Linux/Unix/BSD's
   by adding some thread interlocking. (20-feb-2008, David Leonard)
 - GNU compiler support on Windows. (20-feb-2008, Alex)
 - HCI register space for UISB added. (18-feb-2008, Brian Wheeler)
 - Added vital product data page 0 (Required for Tru64).
   (18-feb-2008, Brian Wheeler)
 - The READ CAPACITY scsi command now properly returns the number of
   the last LBA (n-1); not the number of LBA's (n). INITIALIZE now
   works properly on a scsi disk. (18-feb-2008, Camiel Vanderhoeven)
 - Added READ_LONG scsi command, and support for MODE_SENSE
   changeable parameter pages. (last bit needed to get SCSI
   working on OpenVMS) (16-feb-2008, Camiel Vanderhoeven)